fix alignment of image on cards

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -196,6 +196,14 @@ h3 {
   opacity: 0.7;
 }
 
+.card-body {
+  display: flex;
+  flex-direction: column;
+  align-items: space-between;
+  justify-content: space-between;
+  height: 90%;
+}
+
 .card-picture:active {
   border: 2px solid $border-color;
 }
